// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box renders correctly  1`] = `
<DocumentFragment>
  <div
    class="cache-11djngs e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with as property 1`] = `
<DocumentFragment>
  .cache-of7ya {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<p
    class="cache-of7ya e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with bordered 1`] = `
<DocumentFragment>
  .cache-of7ya {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<div
    class="cache-of7ya e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with system 1`] = `
<DocumentFragment>
  .cache-1yyq8hi.cache-1yyq8hi {
  height: 100px;
  background-color: #4f0599;
  margin-right: auto;
  margin-left: auto;
  padding: 16px;
}

<div
    class="cache-1yyq8hi e7ah3bn0"
  />
</DocumentFragment>
`;
